[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "farmbot"
dynamic = ["version"]
License = "MIT"
authors = [
    {name = "FarmBot Inc."},
]
keywords = ["farmbot"]
description = "FarmBot Python package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "paho-mqtt",
]

[project.urls]
homepage = "https://github.com/FarmBot/farmbot-py"
issues = "https://github.com/FarmBot/farmbot-py/issues"

[tool.hatch.version]
path = "farmbot/main.py"
